--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,12 @@ jobs:
           echo "---"
           echo "Testing '. ./shifu less':"
           /bin/sh -c '. ./shifu less; type cmd_name 2>&1 || echo "cmd_name not defined"'
+          echo "---"
+          echo "Checking args inside sourced script:"
+          /bin/sh -c 'echo "before source: \$#=$# \$1=$1"; . ./shifu less; echo "after source: \$#=$# \$1=$1"'
+          echo "---"
+          echo "Direct test of shifu conditional:"
+          /bin/sh -c '. ./shifu less; echo "shifu_less defined: $(type shifu_less 2>&1)"'
 
       - name: Cache container image
         uses: actions/cache@v4
